# UAV-Ground-Station-Plugin

./: .gitignore  CLAUDE.md  CMakeLists.txt
core/: CommunicationHub.cpp  CommunicationHub.h  LinkManager.cpp  LinkManager.h  MainWindow.cpp  MainWindow.h  MavlinkService.cpp  MavlinkService.h  PluginManager.cpp  PluginManager.h  SerialLink.cpp  SerialLink.h  UdpLink.cpp  UdpLink.h  main.cpp
interfaces/: ILink.h  ILinkManager.h  IMavlinkService.h  IMissionManager.h  IParameterProvider.h  IPlugin.h  ITelemetryProvider.h  IUiComponent.h
plugins/: .gitkeep
plugins/UAVParameterPlugin/: UAVParameterPlugin.cpp  UAVParameterPlugin.h  parameter.json
resources/: .gitkeep
sdk/common/: GlobalDefines.h
sdk/mavlink/: MavLinkProtocol.cpp  MavLinkProtocol.h
tests/: .gitkeep
